--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,35 +14,23 @@ import MarkdownLayout from '~/layouts/MarkdownLayout.astro';
 	<div class="flex flex-col items-center gap-4 xl:flex-row">
 		<Picture class="lg:max-w-md" src={img} formats={['avif', 'webp']} alt="a dog" loading="eager" />
 		<div>
-			<h1>Hello there! I am Ladit👋</h1>
-			<p>
-				This is a blog template built with <a href="https://astro.build">Astro</a>. The theme
-				originates from <a href="https://github.com/varkai/hugo-theme-zozo">hugo-theme-zozo</a>.
-				Check out <a href="/posts/getting-started">the docs</a> to get started. Here are some
-				features:
-			</p>
+			<h1>Hello there! I am Joseph Gu👋</h1>
+			<p>🤗欢迎来到我的个人网站🤗 我是一个兴趣爱好广泛的全栈程序员（其实也不能完全算是严格意义上的程序员QWQ）。本科为软件工程专业，目前硕士研究生“机器人自主决策”方向在读。掌握以下技能：</p>
 			<ul class="list-disc">
-				<li>
-					Fast and light weight. Lighthouse 4 * 100/100 on desktop. 1 point decreased on mobile.
-				</li>
-				<li>
-					<a href="https://astro.build">Astro 4</a> with no other UI frameworks integrated for better
-					performance
-				</li>
-				<li>
-					mobile-friendly responsive design with <a href="https://tailwindcss.com/">Tailwind CSS</a>
-				</li>
-				<li>
-					Light / dark theme derived from <a href="https://github.com/varkai/hugo-theme-zozo"
-						>hugo-theme-zozo</a
-					>
-				</li>
-				<li>Markdown post support with emoji shortcode, katex</li>
-				<li>static search with <a href="https://pagefind.app">Pagefind</a></li>
-				<li>comment system powered by <a href="https://github.com/giscus/giscus">giscus</a></li>
-				<li>SEO-friendly setup with canonical URLs and OpenGraph data</li>
-				<li>RSS / Sitemap.xml / dynamic open graph image generation</li>
+				<li>计算机基础知识，包括但不限于操作系统、算法、软件设计模式</li>
+				<li>各种编程语言，包括但不限于C、C++、Java、Python、Javascript/Typescript、Go</li>
+				<li>软件开发，包括但不限于前端(<b>React & Next.js</b>, Vue)、后端(SpringBoot、FastAPI/Django、Express/Nest.js/Hono)、数据库(MySQL、PostgreSQL、MongoDB、Redis)、APP开发(React Native & Expo)</li>
+				<li>嵌入式开发，有树莓派、Jetson、华为Ascend板子的项目开发经验</li>
+				<li>深度学习，有较为扎实的Deep Learning基本功，对神经网络等有深入了解。在CV、NLP(especially LLM)等领域有项目实战经验</li>
+				<li>学术能力，目前有一篇一作论文，猛肝下一篇中...</li>
+				<li>运维和部署，有较多打包和部署Docker容器的经验</li>
 			</ul>
+			<p>
+				目前正在学习Robot相关（特别是Manipulation方向）和整个硬件工程师的技术栈💪
+			</p>
+			<p>网站会不定期更新，内容包括我学术、工程、生活上的各种记录，努力做到更新的内容全网独家且具有高质量。如果有学术/项目合作，欢迎通过网站上方的邮箱(josephgu0323@outlook.com)等途径联系我，看到会第一时间回复。如果不想错过内容，可以通过网站右上角的RSS图标进行订阅。后续如果读者多的话会考虑增加邮件订阅渠道。</p>
+			<p>除此之外，我也是个热爱生活的人，有很多很多的兴趣爱好❤️～你可以在<a href="/about">About</a>页面看到更丰富立体的我～</p>
+			
 		</div>
 	</div>
 </MarkdownLayout>
